--- a/reearth.yml
+++ b/reearth.yml
@@ -1,7 +1,17 @@
 id: svn
 name: svn
-version: 1.1.0
+version: 1.2.0
 extensions:
   - id: svn
     type: widget
     name: SVN
+  - id: ttsinfo
+    type: block
+    name: TTS info for SVN
+    schema:
+      groups:
+        - id: default
+          fields:
+            - id: textdata
+              type: string
+              title: Text Data
