--- a/reearth.yml
+++ b/reearth.yml
@@ -13,5 +13,5 @@ extensions:
         - id: default
           fields:
             - id: textdata
-              type: string
+              type: typography
               title: Text Data
