--- a/reearth.yml
+++ b/reearth.yml
@@ -1,6 +1,6 @@
 id: svn
 name: svn
-version: 1.32.0
+version: 1.33.0
 extensions:
   - id: svn
     type: widget
@@ -15,3 +15,6 @@ extensions:
             - id: textdata
               type: string
               title: Text Data
+            - id: metadata
+              type: string
+              title: Meta Data
